--- a/CognitativeConcentration/Static/CCstyle.css
+++ b/CognitativeConcentration/Static/CCstyle.css
@@ -25,3 +25,59 @@ table.T1 {
   height: 140px;
   position: relative;
 }
+
+#countdown
+{
+    font-size: 105px;
+}
+
+table td.crossed
+{
+   background-image: linear-gradient(to bottom right,  transparent calc(50% - 3px), red, transparent calc(50% + 3px));
+   /*background-image: linear-gradient(to top right,  transparent calc(50% - 1px), red, transparent calc(50% + 1px));*/
+}
+
+
+.button {
+  background: linear-gradient(green, darkgreen);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 12px;
+  transition: all 0.5s;
+  cursor: pointer;
+  transform: translatex(5px);
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 1s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button:active {
+  box-shadow: 0 10px #999;
+}
