--- a/CognitativeConcentration/Templates/CCindex.html
+++ b/CognitativeConcentration/Templates/CCindex.html
@@ -1,12 +1,13 @@
 <html>
 
   <head>
+      <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CCstyle.css') }}">
   </head>
 
   <body>
     <div id="countdown"></div>
-    <span id="timer">0</span> s <button type="button" id="MyB">Start!</button>
+    <span id="timer">0</span> s <button type="button" id="MyB" class = 'button' onclick="style.display = 'none'">Start!</button>
 
 
     <table class='T1' id='myTable'>
@@ -41,7 +42,6 @@
 
     </table>
   </body>
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
   <script src="{{url_for('static', filename='CCjs.js')}}"></script>
 
 </html>
