created lorem results endpoint

--- a/CognitativeConcentration/Templates/CCindex.html
+++ b/CognitativeConcentration/Templates/CCindex.html
@@ -8,7 +8,7 @@
   <body>
     <div id="countdown"></div>
     <span id="timer">0</span> s <button type="button" id="MyB" class = 'button' onclick="style.display = 'none'">Start!</button>
-
+<button type="button" onclick="window.location.href='{{ url_for( 'res') }}';">Leader board</button>
 
     <table class='T1' id='myTable'>
       <tbody id='body'>
