--- a/CognitativeConcentration/Templates/results.html
+++ b/CognitativeConcentration/Templates/results.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CCstyle.css') }}">
     <meta charset="UTF-8">
     <title>Results</title>
 </head>
 <body>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, ipsam quisquam. Autem debitis delectus eum illum ratione. Alias animi asperiores atque commodi dolore eligendi eos eveniet, impedit, quis repellendus sunt!
+<button type="button" onclick="window.location.href='{{ url_for( 'index') }}';">Try Again!</button>
+<table class="leaderboardClass" id="PQTable">
+      <tbody>
+        <tr>
+          <th>Name</th>
+        <th class="FG">Time</th>
+        <tr>
+            <td>A</td>
+            <td>1</td>
+        </tr>
+         <tr>
+            <td>A</td>
+              <td>1</td>
+        </tr>
+         <tr>
+            <td>A</td>
+              <td>1</td>
+        </tr>
+
+      </tbody>
+</table>
 </body>
 </html>
